2007-08-31  Øyvind Kolås  <pippin@gimp.org>

	* app/display/gimpdisplayshell-render.c: (render_image_tile_fault):
	use nearest neighbour resampling when rendering for a 1byte per pixel
	drawable (ony happens when interacting with the SIOX tool, and then
	the buffer is a indexed; not a greyscale buffer), fixes bug #472027.

2007-08-31  Raphaël Quinet  <raphael@gimp.org>

	* app/display/gimpdisplayshell-render.c (render_image_tile_fault):
	do not use anti-aliasing when the zoom is exactly 200%.  Fixes bug
	#472150.  Also miscellaneous cosmetic changes.

2007-08-31  Simon Budig  <simon@gimp.org>

	* plug-ins/common/antialias.c: fixed subtle cut'n'paste bug,
	made the code a little bit more readable.

2007-08-30  Karine Delvare  <edhel@gimp.org>

	* plug-ins/common/illusion.c
	* plug-ins/common/polar.c
	* plug-ins/common/whirlpinch.c: applied patches from Aurimas Juška
	that fixes use of the GimpZoomPreview widget in those plug-ins (see
	bug #356716), and makes illusion handle selections properly.

2007-08-30  Raphaël Quinet  <raphael@gimp.org>

	* authors.xml: updated some entries, added contributors: Nicola
	Archibald, Tim Mooney, Nils Philippsen and Yoshinori Yamakawa

	* AUTHORS: regenerated.

2007-08-30  Michael Natterer  <mitch@gimp.org>

	* libgimpbase/gimpbaseenums.h: remove extraneous comma.

2007-08-30  Michael Natterer  <mitch@gimp.org>

	* app/gui/sync-menu.c: take over cosmetic fix from upstream.

	* configure.in: add HAVE_CARBON as AM_CONDITIONAL

	* menus/image-menu.xml.in: add the Help menu to the image menu.

	* menus/Makefile.am
	* menus/menus.xsl: filter it away if we are not on carbon.

	* app/menus/menus.c: added the "help" action group to the image UI
	manager.

2007-08-30  Simon Budig  <simon@gimp.org>

	* plug-ins/script-fu/scheme-wrapper.c
	* plug-ins/script-fu/tinyscheme/scheme.[ch]
	* plug-ins/script-fu/scheme-wrapper.h: Shuffeled some
	code around to have scheme.c not include scheme-wrapper.h.

2007-08-30  Raphaël Quinet  <raphael@gimp.org>
